--- a/vanilla/index.html
+++ b/vanilla/index.html
@@ -24,92 +24,94 @@
           <input type="color" name="picker" id="picker">
         </form>
       </div>
-      <div class="keyboard">
-        <div class="row">
-          <div class="key key1"><span>Esc</span></div>
+      <div class="desk-mat">
+        <div class="keyboard">
+          <div class="row">
+            <div class="key key1"><span>Esc</span></div>
 
-          <div class="gap-1"></div>
+            <div class="gap-1"></div>
 
-          <div class="key key1"><span>F2</span></div>
-          <div class="key key1"><span>F3</span></div>
-          <div class="key key1"><span>F1</span></div>
-          <div class="key key1"><span>F4</span></div>
+            <div class="key key1"><span>F2</span></div>
+            <div class="key key1"><span>F3</span></div>
+            <div class="key key1"><span>F1</span></div>
+            <div class="key key1"><span>F4</span></div>
 
-          <div class="gap-half"></div>
+            <div class="gap-half"></div>
 
-          <div class="key key1"><span>F5</span></div>
-          <div class="key key1"><span>F6</span></div>
-          <div class="key key1"><span>F7</span></div>
-          <div class="key key1"><span>F8</span></div>
+            <div class="key key1"><span>F5</span></div>
+            <div class="key key1"><span>F6</span></div>
+            <div class="key key1"><span>F7</span></div>
+            <div class="key key1"><span>F8</span></div>
 
-          <div class="gap-half"></div>
+            <div class="gap-half"></div>
 
-          <div class="key key1"><span>F9</span></div>
-          <div class="key key1"><span>F10</span></div>
-          <div class="key key1"><span>F11</span></div>
-          <div class="key key1"><span>F12</span></div>
+            <div class="key key1"><span>F9</span></div>
+            <div class="key key1"><span>F10</span></div>
+            <div class="key key1"><span>F11</span></div>
+            <div class="key key1"><span>F12</span></div>
 
-          <div class="gap-half"></div>
+            <div class="gap-half"></div>
 
-          <div class="key key1"><span>PrtSc</span></div>
-          <div class="key key1"><span>Scroll Lock</span></div>
-          <div class="key key1"><span>Pause</span></div>
-        </div>
+            <div class="key key1"><span>PrtSc</span></div>
+            <div class="key key1"><span>Scroll Lock</span></div>
+            <div class="key key1"><span>Pause</span></div>
+          </div>
 
-        <div class="row mt-2">
-          <div class="key key1"><span>~ <br> `</span></div>
-          <div class="key key1"><span>1</span></div>
-          <div class="key key1"><span>2</span></div>
-          <div class="key key1"><span>3</span></div>
-          <div class="key key1"><span>4</span></div>
-          <div class="key key1"><span>5</span></div>
-          <div class="key key1"><span>6</span></div>
-          <div class="key key1"><span>7</span></div>
-          <div class="key key1"><span>8</span></div>
-          <div class="key key1"><span>9</span></div>
-          <div class="key key1"><span>0</span></div>
-          <div class="key key1"><span>-</span></div>
-          <div class="key key1"><span>=</span></div>
-          <div class="key key2"><span>Backspace</span></div>
+          <div class="row mt-2">
+            <div class="key key1"><span>~ <br> `</span></div>
+            <div class="key key1"><span>1</span></div>
+            <div class="key key1"><span>2</span></div>
+            <div class="key key1"><span>3</span></div>
+            <div class="key key1"><span>4</span></div>
+            <div class="key key1"><span>5</span></div>
+            <div class="key key1"><span>6</span></div>
+            <div class="key key1"><span>7</span></div>
+            <div class="key key1"><span>8</span></div>
+            <div class="key key1"><span>9</span></div>
+            <div class="key key1"><span>0</span></div>
+            <div class="key key1"><span>-</span></div>
+            <div class="key key1"><span>=</span></div>
+            <div class="key key2"><span>Backspace</span></div>
 
-          <div class="gap-half"></div>
-          <div class="key key1"><span>Insert</span></div>
-          <div class="key key1"><span>Home</span></div>
-          <div class="key key1"><span>Page up</span></div>
-        </div>
+            <div class="gap-half"></div>
+            <div class="key key1"><span>Insert</span></div>
+            <div class="key key1"><span>Home</span></div>
+            <div class="key key1"><span>Page up</span></div>
+          </div>
 
-        <div class="row mt-2">
-          <div class="key key1.25"><span>Tab</span></div>
-          <div class="key key1"><span>q</span></div>
-          <div class="key key1"><span>w</span></div>
-          <div class="key key1"><span>e</span></div>
-          <div class="key key1"><span>r</span></div>
-          <div class="key key1"><span>t</span></div>
-          <div class="key key1"><span>y</span></div>
-          <div class="key key1"><span>u</span></div>
-          <div class="key key1"><span>i</span></div>
-          <div class="key key1"><span>o</span></div>
-          <div class="key key1"><span>p</span></div>
-          <div class="key key1"><span>[</span></div>
-          <div class="key key1"><span>]</span></div>
-          <div class="key key1.25"><span>| <br> \</span></div>
-        </div>
+          <div class="row mt-2">
+            <div class="key key1.25"><span>Tab</span></div>
+            <div class="key key1"><span>q</span></div>
+            <div class="key key1"><span>w</span></div>
+            <div class="key key1"><span>e</span></div>
+            <div class="key key1"><span>r</span></div>
+            <div class="key key1"><span>t</span></div>
+            <div class="key key1"><span>y</span></div>
+            <div class="key key1"><span>u</span></div>
+            <div class="key key1"><span>i</span></div>
+            <div class="key key1"><span>o</span></div>
+            <div class="key key1"><span>p</span></div>
+            <div class="key key1"><span>[</span></div>
+            <div class="key key1"><span>]</span></div>
+            <div class="key key1.25"><span>| <br> \</span></div>
+          </div>
 
-        <div class="row mt-2">
-          <div class="key key1.5"><span>Caps<br>Lock</span></div>
-          <div class="key key1"><span>a</span></div>
-          <div class="key key1"><span>s</span></div>
-          <div class="key key1"><span>d</span></div>
-          <div class="key key1"><span>f</span></div>
-          <div class="key key1"><span>g</span></div>
-          <div class="key key1"><span>h</span></div>
-          <div class="key key1"><span>j</span></div>
-          <div class="key key1"><span>k</span></div>
-          <div class="key key1"><span>l</span></div>
-          <div class="key key1"><span>;</span></div>
-          <div class="key key1"><span>'</span></div>
-          <div class="key key2"><span>Enter</span></div>
+          <div class="row mt-2">
+            <div class="key key1.5"><span>Caps<br>Lock</span></div>
+            <div class="key key1"><span>a</span></div>
+            <div class="key key1"><span>s</span></div>
+            <div class="key key1"><span>d</span></div>
+            <div class="key key1"><span>f</span></div>
+            <div class="key key1"><span>g</span></div>
+            <div class="key key1"><span>h</span></div>
+            <div class="key key1"><span>j</span></div>
+            <div class="key key1"><span>k</span></div>
+            <div class="key key1"><span>l</span></div>
+            <div class="key key1"><span>;</span></div>
+            <div class="key key1"><span>'</span></div>
+            <div class="key key2"><span>Enter</span></div>
 
+          </div>
         </div>
       </div>
     </div>
