more styling for the color pickers

--- a/vanilla/index.html
+++ b/vanilla/index.html
@@ -20,8 +20,11 @@
     <div class="container">
       <div class="controls mb-20">
         <h3>Select your colors</h3>
-        <form action="/">
-          <input type="color" name="picker" id="picker">
+        <form class='colors-form'>
+          <label for="key-color">Key cap color: </label>
+          <input class="mr-10" type="color" name="key-color" id="key-color">
+          <label for="key-color">Key character color: </label>
+          <input class="mr-10" type="color" name="key-char-color" id="key-char-color">
         </form>
       </div>
       <div class="desk-mat">
