--- a/vanilla/index.html
+++ b/vanilla/index.html
@@ -60,7 +60,7 @@
             <div class="key key1"><span>Pause</span></div>
           </div>
 
-          <div class="row mt-2">
+          <div class="row mt-20">
             <div class="key key1"><span>~ <br> `</span></div>
             <div class="key key1"><span>1</span></div>
             <div class="key key1"><span>2</span></div>
@@ -83,7 +83,7 @@
           </div>
 
           <div class="row mt-2">
-            <div class="key key1.25"><span>Tab</span></div>
+            <div class="key key1.5"><span>Tab</span></div>
             <div class="key key1"><span>q</span></div>
             <div class="key key1"><span>w</span></div>
             <div class="key key1"><span>e</span></div>
@@ -96,11 +96,15 @@
             <div class="key key1"><span>p</span></div>
             <div class="key key1"><span>[</span></div>
             <div class="key key1"><span>]</span></div>
-            <div class="key key1.25"><span>| <br> \</span></div>
+            <div class="key key1.5"><span>| <br> \</span></div>
+            <div class="gap-half"></div>
+            <div class="key key1"><span>Delete</span></div>
+            <div class="key key1"><span>End</span></div>
+            <div class="key key1"><span>Page Down</span></div>
           </div>
 
           <div class="row mt-2">
-            <div class="key key1.5"><span>Caps<br>Lock</span></div>
+            <div class="key key1.75"><span>Caps<br>Lock</span></div>
             <div class="key key1"><span>a</span></div>
             <div class="key key1"><span>s</span></div>
             <div class="key key1"><span>d</span></div>
@@ -112,8 +116,44 @@
             <div class="key key1"><span>l</span></div>
             <div class="key key1"><span>;</span></div>
             <div class="key key1"><span>'</span></div>
-            <div class="key key2"><span>Enter</span></div>
+            <div class="key key2.25"><span>Enter</span></div>
+          </div>
 
+          <div class="row mt-2">
+            <div class="key key2.25"><span>Shift</span></div>
+            <div class="key key1"><span>z</span></div>
+            <div class="key key1"><span>x</span></div>
+            <div class="key key1"><span>c</span></div>
+            <div class="key key1"><span>v</span></div>
+            <div class="key key1"><span>b</span></div>
+            <div class="key key1"><span>n</span></div>
+            <div class="key key1"><span>m</span></div>
+            <div class="key key1"><span>
+                <<br>,
+              </span></div>
+            <div class="key key1"><span>><br>.</span></div>
+            <div class="key key1"><span>?<br>/</span></div>
+            <div class="key key2.75"><span>Shift</span></div>
+            <div class="gap-half"></div>
+            <div class="gap-1"></div>
+            <div class="key key1">
+              <span>Up</span>
+            </div>
+          </div>
+
+          <div class="row mt-2">
+            <div class="key key1.25"><span>Control</span></div>
+            <div class="key key1.25"><span>Super</span></div>
+            <div class="key key1.25"><span>Alt</span></div>
+            <div class="key key6.25"><span>Space</span></div>
+            <div class="key key1.25"><span>Alt</span></div>
+            <div class="key key1.25"><span>Super</span></div>
+            <div class="key key1.25"><span>Fn</span></div>
+            <div class="key key1.25"><span>Control</span></div>
+            <div class="gap-half"></div>
+            <div class="key key1"><span>Left</span></div>
+            <div class="key key1"><span>Down</span></div>
+            <div class="key key1"><span>Right</span></div>
           </div>
         </div>
       </div>
